--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@ant-design/icons": "^5.3.6",
+    "@ant-design/icons-vue": "^7.0.1",
     "@mdi/font": "^7.4.47",
     "apexcharts": "^3.48.0",
     "pinia": "^2.1.7",
